--- a/src/EStore.Client/Pages/Products/Create.cshtml
+++ b/src/EStore.Client/Pages/Products/Create.cshtml
@@ -2,7 +2,7 @@
 @model EStore.Client.Pages.Products.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "CreateAsync";
 }
 
 <h1>Create</h1>
