--- a/src/EStore.Client/Pages/Products/Delete.cshtml
+++ b/src/EStore.Client/Pages/Products/Delete.cshtml
@@ -2,7 +2,7 @@
 @model EStore.Client.Pages.Products.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "DeleteAsync";
 }
 
 <h1>Delete</h1>
